Fixed bug #49647 (DOMUserData does not exist)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@288654 c90b9560-bf6c-de11-be94-00142212c4b1